/*
 * Copyright Â© 2022, The Elide Framework Authors. All rights reserved.
 *
 * The Gust/Elide framework and tools, and all associated source or object computer code, except where otherwise noted,
 * are licensed under the Zero Prosperity license, which is enclosed in this repository, in the file LICENSE.txt. Use of
 * this code in object or source form requires and implies consent and agreement to that license in principle and
 * practice. Source or object code not listing this header, or unless specified otherwise, remain the property of
 * Elide LLC and its suppliers, if any. The intellectual and technical concepts contained herein are proprietary to
 * Elide LLC and its suppliers and may be covered by U.S. and Foreign Patents, or patents in process, and are protected
 * by trade secret and copyright law. Dissemination of this information, or reproduction of this material, in any form,
 * is strictly forbidden except in adherence with assigned license requirements.
 */

syntax = "proto3";
package elide.app;

import "elide/app/domain.proto";
import "elide/app/env.proto";
import "elide/app/identity.proto";
import "elide/app/secret.proto";
import "elide/db/db.proto";
import "elide/kv/kv.proto";
import "elide/meta/guest.proto";
import "elide/meta/syntax.proto";
import "elide/net/network.proto";
import "elide/net/service.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option optimize_for = SPEED;
option cc_enable_arenas = true;
option java_multiple_files = true;
option java_string_check_utf8 = true;
option php_class_prefix = "ELD";
option swift_prefix = "Elide";
option objc_class_prefix = "ELD";
option java_package = "tools.elide.app";
option csharp_namespace = "Elide.App";
option go_package = "github.com/elide-tools/elide/app;app";

// Application-level configuration value.
message ConfigurationValue {
  // Key for the configuration value; may be nested via dot notation.
  string key = 1;

  // Value for this configuration entry.
  oneof data {
    // Value for this configuration.
    google.protobuf.Value value = 2;

    // Typed value for this configuration.
    google.protobuf.Any typed_value = 3;
  }
}

// Describes sourcing information for an application configuration suite entry.
message AppConfigurationSource {
  // Nothing at this time.
}

// Suite of generic application configuration properties.
message AppConfigurationSuite {
  // Generated or assigned name for this suite; for file-based configuration, this may be a file path, for example.
  string name = 1;

  // Disables this configuration from processing.
  bool inert = 2;

  // Source for this application configuration suite.
  AppConfigurationSource source = 3;

  // Priority during processing for this configuration suite.
  uint32 priority = 4;

  // Configuration values associated with this suite.
  repeated ConfigurationValue config = 5;
}

// Top-level application configuration record, describing a full suite of configuration for an Elide app.
message AppConfiguration {
  // Short-name for the application, given by the developer.
  string name = 1;

  // Display name for the application, given by the developer. Shown in UI and other user-facing contexts.
  string display_name = 2;

  // Configuration for this application's identity and authorization.
  elide.app.IdentityConfiguration identity = 3;

  // Configured default machine information, or override machine information, depending on context.
  AppMachineConfiguration machine = 4;

  // Enabled languages for this application.
  elide.meta.GuestLanguage language = 5;

  // Guest VM configuration.
  elide.meta.GuestConfiguration vm = 6;

  // Environment variables configured for this application.
  repeated elide.app.EnvVar env = 7;

  // Secrets configured for this application's access.
  repeated elide.app.Secret secret = 8;

  // Exposed services for this application.
  repeated elide.net.Service service = 9;

  // Key-value namespaces configured for this application.
  repeated elide.kv.Namespace kv = 10;

  // Database connections configured for this application.
  repeated elide.db.Database db = 11;

  // Custom domains mapped for this application.
  repeated elide.app.Domain domain = 12;

  // Configuration suites to make available to the application.
  repeated AppConfigurationSuite config = 13;
}

// Specifies machine sizing information.
message MachineSize {
  // Specifies compute scale settings for this machine configuration.
  oneof compute {
    // CPU core count to allocate for this machine.
    uint32 cores = 1;

    // CPU MHz to allocate for this machine.
    uint32 mhz = 2;
  }

  // Specifies memory scale settings for this machine configuration, in megabytes.
  uint32 memory = 3;

  // Specifies disk scale settings for this machine configuration, in megabytes.
  uint32 disk = 4;
}

// Configures application machines with regard to scale, networking, and other runtime concerns.
message AppMachineConfiguration {
  // Specifies machine sizing information for this configuration.
  MachineSize size = 1;

  // Networking settings to apply to this machine configuration.
  elide.net.Networking networking = 2;
}
